[gd_scene load_steps=3 format=3 uid="uid://twe2bfij7l3w"]

[ext_resource type="StyleBox" uid="uid://cjukuw32vfjm2" path="res://addons/cards/card_normal.tres" id="1_omt4d"]
[ext_resource type="Script" uid="uid://dqueur50eojyg" path="res://addons/cards/inspector.gd" id="2_odq40"]

[node name="inspector" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_omt4d")
script = ExtResource("2_odq40")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="view_container" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/view_container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Close"

[node name="Tree" type="Tree" parent="MarginContainer/view_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
columns = 2

[node name="Text" type="TextEdit" parent="MarginContainer/view_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
editable = false

[node name="Resize" type="Panel" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12

[connection signal="pressed" from="MarginContainer/view_container/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="item_collapsed" from="MarginContainer/view_container/Tree" to="." method="_on_tree_item_collapsed"]
[connection signal="gui_input" from="Resize" to="." method="_on_resize_gui_input"]
